syntax = 'proto3';
option go_package="./;cyh_user_srv";
package cyh_user_srv;


service FrontUser {
  rpc FrontUserRegister(FrontUserRequest) returns (FrontUserResponse){}
  rpc FrontUserSendEmail(FrontUserMailRequest) returns (FrontUserResponse){}
  rpc FrontUserLogin(FrontUserRequest) returns (FrontUserResponse){}
}

message FrontUserRequest {
  string email = 1;
  string code = 2;
  string password = 3;
  string repassword = 4;
}

message FrontUserMailRequest {
  string email = 1;
}

message FrontUserResponse {
  int32 code = 1;
  string msg = 2;
  string user_name = 3;
}
